# server/api/Controllers/BookController.cs
@@ -1,6 +1,5 @@
 ﻿using api.Dtos;
 using api.Services;
-using efscaffold;
 using Microsoft.AspNetCore.Mvc;
 
 namespace api.Controllers;
@@ -8,20 +7,40 @@ namespace api.Controllers;
 [ApiController]
 public class BookController(ILibraryService libraryService) : ControllerBase
 {
-    [Route(nameof(GetAllBooks))]
-    [HttpGet]
-    public async Task<ActionResult<List<Book>>> GetAllBooks()
+    [HttpGet(nameof(GetAllBooks))]
+    public async Task<ActionResult<List<BookDto>>> GetAllBooks()
     {
         var books = await libraryService.GetAllBooks();
-        return books;
+        return Ok(books);
     }
-
-    [Route(nameof(CreateBook))]
-    [HttpPost]
-    public async Task<ActionResult<Book>> CreateBook ([FromBody] CreateBookDto dto)
+    
+    [HttpPost(nameof(CreateBook))]
+    public async Task<ActionResult<BookDto>> CreateBook ([FromBody] CreateBookDto dto)
     {
         var result = await libraryService.CreateBook(dto);
-        return result;
+        return CreatedAtAction(nameof(GetAllBooks), new  { Id = result.Id }, result);
+    }
+    
+    [HttpPatch(nameof(UpdateBook))]
+    public async Task<ActionResult<BookDto>> UpdateBook([FromBody] UpdateBookDto dto)
+    {
+        var result = await libraryService.UpdateBook(dto);
+        if (result == null)
+        {
+            return NotFound();
+        }
+        return Ok(result);
+    }
+    
+    [HttpDelete(nameof(DeleteBook))]
+    public async Task<ActionResult<BookDto>> DeleteBook(string id)
+    {
+        var result = await libraryService.DeleteBook(id);
+        if (result == null)
+        {
+            return NotFound();
+        }
+        return Ok(result);
     }
     
 }
